--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,1 +1,21 @@
-<p>header works!</p>
+<header>
+  <div id="logo">
+    <img src="logo.png" alt="website logo, a server"/>
+  </div>
+
+  <nav>
+    <ul>
+      <li>
+        <a href="/">Home</a>
+      </li>
+      <li>
+        <a href="/">Managment</a>
+      </li>
+      <li>
+        <button appButton>
+          logOut
+        </button>
+      </li>
+    </ul>
+  </nav>
+</header>
