--- a/src/app/dashboard/server-status/server-status.component.html
+++ b/src/app/dashboard/server-status/server-status.component.html
@@ -1,1 +1,13 @@
-<p>server-status works!</p>
+ <div>
+    @if(currentStatus==="online"){
+      <p>Servers are Online</p>
+      <p>All systems are operational</p>
+    } @else if (currentStatus==="offline"){
+      <p>Servers are Offline</p>
+      <p>Functionality should be restored soon.</p>
+    } @else {
+      <p>Server status is Unknown</p>
+      <p>fetching server status failed</p>
+    }
+  </div>
+
