added destroyRef and other feature

--- a/src/app/dashboard/tickets/new-ticket/new-ticket.component.html
+++ b/src/app/dashboard/tickets/new-ticket/new-ticket.component.html
@@ -8,9 +8,10 @@
     <textarea name="request" id="request" rows="3"></textarea>
   </app-control>
 
-  <div style="display: flex; justify-content: center">
+  <div style="display: flex; justify-content: center; margin-top: 10px">
     <button appButton>
       Submit
     </button>
   </div>
+
 </form>
