--- a/src/app/dashboard/server-status/server-status.component.html
+++ b/src/app/dashboard/server-status/server-status.component.html
@@ -1,4 +1,9 @@
- <div>
+ <div [class.status]="{
+  status:true,
+  'status-online':currentStatus === 'online',
+  'status-offline':currentStatus === 'offline',
+  'status-unknown':currentStatus === 'unknown'
+ }">
     @if(currentStatus==="online"){
       <p>Servers are Online</p>
       <p>All systems are operational</p>
